# expense-viewer

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Deustche_bank_expense_details.ipynb  Deustche_bank_expense_details.py  Load_expense_details.ipynb  README.md  Revolut_expense_details.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  expense_config.yaml  noxfile.py  setup.cfg  setup.py
src/: app.py
src/expense_viewer/: __init__.py  cli.py  data_loader.py  exceptions.py  expense_config.yaml  main.py  utils.py
src/expense_viewer/expense/: __init__.py  abs_expense.py  category_expense.py  expense.py  monthly_expense.py  overall_expense.py
tests/: test_data_loader.py  test_main.py  test_utils.py
tests/expenses/: test_monthly_expense.py  test_overall_expense.py
tests/test_data/: yaml_test_file.yaml
