[metadata]
name = expense_viewer
version = 0.0.1
author_email = subhayan.here@gmail.com
description = "A small Python package to check the expenses incurred in a month"

[options]
package_dir =
    =src
packages = find:
include_package_data = true
install_requires = 
    pandas
    ruamel.yaml
    matplotlib

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    pytest-mock
    pytest-cov
develop =
    pylint
    pytest
    pre-commit
    mypy
    nox
    isort